refactor(fridge-recommendation): add from constructor to FridgeRecommendationResponse and use convenience method for adding recommended products in getLatestRecommendation